Shape Event model & Update API
